sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:9: error: not found: value j
  for(k <- j-2 to 1 by -1) {
           ^